--- a/4-Selenium/line_movie.ipynb
+++ b/4-Selenium/line_movie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "4c4bdc7c",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "c0a66f79",
    "metadata": {},
    "outputs": [
@@ -37,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.5\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.2\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.6\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.3\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.7\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.8\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.9\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.10\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.11\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.12\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.13\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.14\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.15\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.16\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.17\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.18\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.19\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.20\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.21\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.22\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.29\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.36\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.37\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.38\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.39\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.40\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.41\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.42\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.30\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.43\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.44\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.45\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.46\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.47\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.48\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.49\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.50\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.51\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.31\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.52\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.32\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.53\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.54\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.55\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.56\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.57\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.58\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.59\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.33\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.60\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.35\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.61\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.62\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.63\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.64\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.65\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.66\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.67\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.68\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"c9b19be3972db7aecfd51aac608c27b9\", element=\"f.FBA84B8B83349A60E6DF49EACD328D88.d.9B60A9E94F2C06E1772BEB0D53F902A6.e.69\")>]\n",
-      "60\n"
+      "[<selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.4\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.2\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.5\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.3\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.6\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.7\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.8\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.9\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.10\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.11\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.12\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.13\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.14\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.15\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.16\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.17\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.18\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.19\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.20\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.21\")>]\n",
+      "20\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "c952937c",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "目前數量: 20\n",
       "目前數量: 30\n",
       "目前數量: 40\n",
       "目前數量: 50\n",
@@ -90,14 +89,14 @@
     }
    ],
    "source": [
-    "time.sleep(2)\n",
+    "import time\n",
     "\n",
     "movie_list = driver.find_elements(By.CSS_SELECTOR,\".detailListItem.movieListing-movie\")\n",
     "last_movie = movie_list[-1]\n",
     "print(f\"目前數量: {len(movie_list)}\")\n",
     "while True:\n",
     "    driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "    time.sleep(2)\n",
+    "    time.sleep(4)\n",
     "    # 取得新的所有元素\n",
     "    movie_list = driver.find_elements(By.CSS_SELECTOR,\".detailListItem.movieListing-movie\")\n",
     "   \n",
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "31ca995f",
    "metadata": {},
    "outputs": [
@@ -118,11 +117,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "闇黑電話2\n",
-      "Black Phone 2\n",
-      "8.6\n",
-      "• 1小時54分 • 2025年10月17日上映\n",
-      "https://today.line.me/tw/v3/movie/KwMWjOo/1\n"
+      "珠寶師遺落在時光裡的愛\n",
+      "The Goldsmith's Secret\n",
+      "10\n",
+      "• 1小時39分 • 2025年10月31日上映\n",
+      "https://today.line.me/tw/v3/movie/9m7WJzq/1\n"
      ]
     }
    ],
