--- a/4-Selenium/line_movie.ipynb
+++ b/4-Selenium/line_movie.ipynb
@@ -2,10 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "4c4bdc7c",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# selenium 起手式\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "import os ,json\n",
+    "# from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "# 建立 Service 物件，指定 chromedriver.exe 的路徑\n",
+    "service = Service()\n",
+    "\n",
+    "# 設定 Chrome 瀏覽器的選項\n",
+    "options = webdriver.ChromeOptions()\n",
+    "options.add_argument(\"--start-maximized\") # Chrome 瀏覽器在啟動時最大化視窗\n",
+    "options.add_argument(\"--incognito\") # 無痕模式\n",
+    "options.add_argument(\"--disable-popup-blocking\") # 停用 Chrome 的彈窗阻擋功能。\n",
+    "\n",
+    "# 建立 Chrome 瀏覽器物件\n",
+    "driver = webdriver.Chrome(options=options)\n",
+    "driver.get(\"https://today.line.me/tw/v2/movie/incinemas/playing\")\n",
+    "\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c952937c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "目前數量: 20\n",
+      "目前數量: 30\n",
+      "目前數量: 40\n",
+      "目前數量: 50\n",
+      "目前數量: 60\n",
+      "目前數量: 70\n",
+      "目前數量: 80\n",
+      "目前數量: 90\n",
+      "已經拉到底了開始整理資料\n",
+      "{'average_grade': '6.2',\n",
+      " 'link': 'https://today.line.me/tw/v3/movie/JPMx3ox/1',\n",
+      " 'name': '出神入化3\\nNow You See Me：Now You Don’t',\n",
+      " 'time': '• 1小時53分 • 2025年11月14日上映'}\n"
+     ]
+    }
+   ],
    "source": [
     "# selenium 起手式\n",
     "from selenium import webdriver\n",
@@ -24,72 +74,10 @@
     "\n",
     "# 建立 Chrome 瀏覽器物件\n",
     "driver = webdriver.Chrome(options=options)\n",
-    "driver.get(\"https://today.line.me/tw/v2/movie/incinemas/playing\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c0a66f79",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.4\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.2\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.5\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.3\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.6\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.7\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.8\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.9\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.10\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.11\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.12\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.13\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.14\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.15\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.16\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.17\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.18\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.19\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.20\")>, <selenium.webdriver.remote.webelement.WebElement (session=\"e5d3e22464efb7ef75de04f9beadd1df\", element=\"f.140BAB3583302D5C791074FC200CA943.d.B71E32BF1401655325BF756117F44AFF.e.21\")>]\n",
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
+    "driver.get(\"https://today.line.me/tw/v2/movie/incinemas/playing\")\n",
+    "\n",
     "import time\n",
-    "movie_list = driver.find_elements(By.CSS_SELECTOR,\".detailListItem.movieListing-movie\")\n",
-    "print(movie_list)\n",
-    "print(len(movie_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "33282d8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
-    "driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "print(len(movie_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c952937c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "目前數量: 30\n",
-      "目前數量: 40\n",
-      "目前數量: 50\n",
-      "目前數量: 60\n",
-      "目前數量: 70\n",
-      "目前數量: 80\n",
-      "目前數量: 90\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
+    "\n",
     "\n",
     "movie_list = driver.find_elements(By.CSS_SELECTOR,\".detailListItem.movieListing-movie\")\n",
     "last_movie = movie_list[-1]\n",
@@ -104,32 +92,88 @@
     "        break\n",
     "\n",
     "    last_movie = movie_list[-1] \n",
-    "    print(f\"目前數量: {len(movie_list)}\") \n"
+    "    print(f\"目前數量: {len(movie_list)}\") \n",
+    "\n",
+    "print(\"已經拉到底了開始整理資料\")\n",
+    "\n",
+    "all_movie_info = [] \n",
+    "for movie in movie_list:\n",
+    "    movie_name = movie.find_element(By.CSS_SELECTOR,\".detailListItem-titles\").text\n",
+    "    movie_grade = movie.find_element(By.CSS_SELECTOR,\".iconInfo.detailListItem-iconInfo\").text\n",
+    "    movie_time = movie.find_element(By.CSS_SELECTOR,\".detailListItem-status > span\").text\n",
+    "    movie_link = movie.find_element(By.CSS_SELECTOR,\".detailListItem-bookingButton\").get_attribute(\"href\")\n",
+    "\n",
+    "    all_movie_info.append({\n",
+    "        \"name\": movie_name,\n",
+    "        \"average_grade\": movie_grade,\n",
+    "        \"time\": movie_time,\n",
+    "        \"link\": movie_link   \n",
+    "    })\n",
+    "    \n",
+    "from pprint import pprint  # 引入pprint漂亮一點印出dic\n",
+    "data = all_movie_info    \n",
+    "pprint(data[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "31ca995f",
+   "execution_count": 20,
+   "id": "1bca24a2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "珠寶師遺落在時光裡的愛\n",
-      "The Goldsmith's Secret\n",
-      "10\n",
-      "• 1小時39分 • 2025年10月31日上映\n",
-      "https://today.line.me/tw/v3/movie/9m7WJzq/1\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (3683902291.py, line 42)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 42\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(get_all_comment(https://today.line.me/tw/v3/movie/9mllw13/1))\u001b[39m\n                                                            ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid decimal literal\n"
      ]
     }
    ],
    "source": [
-    "print(movie_list[-1].find_element(By.CSS_SELECTOR,\".detailListItem-titles\").text)\n",
-    "print(movie_list[-1].find_element(By.CSS_SELECTOR,\".iconInfo.detailListItem-iconInfo\").text)\n",
-    "print(movie_list[-1].find_element(By.CSS_SELECTOR,\".detailListItem-status > span\").text)\n",
-    "print(movie_list[-1].find_element(By.CSS_SELECTOR,\".detailListItem-bookingButton\").get_attribute(\"href\"))"
+    "star_mapping ={\n",
+    "    \"M12 18.344l-5.81 3.609c-.147.091-.34.046-.43-.1-.043-.07-.057-.152-.04-.23l1.469-6.96-5.09-4.736c-.126-.118-.133-.316-.016-.442.052-.056.122-.091.198-.099l6.746-.68 2.684-6.513c.066-.16.249-.235.408-.17.077.032.138.094.17.17l2.684 6.514 6.746.68c.172.017.297.17.28.342-.008.075-.043.146-.099.198l-5.09 4.736 1.47 6.96c.036.169-.072.334-.24.37-.08.017-.161.002-.23-.04L12 18.343z\" : 2,\n",
+    "\n",
+    "    \"M12.12 2.024c.076.031.137.093.169.17l2.684 6.513 6.746.68c.172.017.297.17.28.342-.008.075-.043.146-.099.198l-5.09 4.736 1.47 6.96c.036.169-.072.334-.24.37-.08.017-.161.002-.23-.04L12 18.343l-5.81 3.61c-.147.091-.34.046-.43-.1-.043-.07-.057-.152-.04-.23l1.469-6.96-5.09-4.736c-.126-.118-.133-.316-.016-.442.052-.056.122-.091.198-.099l6.746-.68 2.684-6.513c.066-.16.249-.235.408-.17zM12 6.463v9.651l3.662 2.275-.925-4.383 3.316-3.086-4.398-.443L12 6.463z\": 1,\n",
+    "\n",
+    "    \"M12.12 2.024c.076.031.137.093.169.17l2.684 6.513 6.746.68c.172.017.297.17.28.342-.008.075-.043.146-.099.198l-5.09 4.736 1.47 6.96c.036.169-.072.334-.24.37-.08.017-.161.002-.23-.04L12 18.343l-5.81 3.61c-.147.091-.34.046-.43-.1-.043-.07-.057-.152-.04-.23l1.469-6.96-5.09-4.736c-.126-.118-.133-.316-.016-.442.052-.056.122-.091.198-.099l6.746-.68 2.684-6.513c.066-.16.249-.235.408-.17zm1.6 8.365L12 6.216l-1.72 4.173-4.549.458 3.43 3.191-.961 4.546 3.8-2.36 3.799 2.36-.96-4.546 3.429-3.191-4.548-.458z\": 0\n",
+    "\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def get_all_comment(url):\n",
+    "    driver.get(url)\n",
+    "    driver.find_element(By.CSS_SELECTOR, \".tabs-list.movie li:nth-child(3)\").click()\n",
+    "    time.sleep(3)\n",
+    "    comment_cards = driver.find_elements(By.CSS_SELECTOR, \".css-hnvcda\")\n",
+    "    comment_info = []\n",
+    "    for comment_card in comment_cards:\n",
+    "        comment_user = comment_card.find_element(By.CSS_SELECTOR, \".ratingCommentItemUser\").text\n",
+    "        rating_container = comment_card.find_element(By.CSS_SELECTOR, \".ratingCommentItemUser-ratingContainer\")\n",
+    "        stars = comment_card.find_elements(By.CSS_SELECTOR, \".ratingStar path\" )\n",
+    "        comment_date = comment_card.find_element(By.CSS_SELECTOR, \".ratingCommentItemUser-createdTime.css-squ0i5\").text\n",
+    "        comment = comment_card.find_element(By.CSS_SELECTOR, \".ratingCommentItemContent\").text\n",
+    "\n",
+    "        grade = 0\n",
+    "        for star in stars:\n",
+    "            path_d = star.get_attribute(\"d\")\n",
+    "            grade += star_mapping[path_d]\n",
+    "            # print(path_d)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "        comment_info.append({\n",
+    "            \"comment_user\": comment_user,\n",
+    "            \"grade\" :grade,\n",
+    "            \"comment_date\": comment_date,\n",
+    "            \"comment\": comment\n",
+    "\n",
+    "        })\n",
+    "        return comment_info\n",
+    "    \n",
+    "\n",
+    "print(get_all_comment(https://today.line.me/tw/v3/movie/9mllw13/1))\n",
+    "    "
    ]
   }
  ],
