--- a/4-Selenium/webdriver_pra.ipynb
+++ b/4-Selenium/webdriver_pra.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "c170bf6d",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "170d7df1",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "b6cb67a3",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "d453eb2a",
    "metadata": {},
    "outputs": [
@@ -166,13 +166,13 @@
     "    \n",
     "    district_value[area_name] = area_value\n",
     "\n",
-    "print(district_value)\n",
+    "district_value\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "774d8063",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
     "\n",
     "# 造訪台北市的搜尋結果頁面\n",
     "driver.get(f\"https://www.104.com.tw/jobs/search/?area={area}&jobsource=index_s&keyword=python&mode=s&page=1\")\n",
-    "    "
+    "\n"
    ]
   },
   {
@@ -199,10 +199,21 @@
    "execution_count": null,
    "id": "182a5c71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI工程師Python\n"
+     ]
+    }
+   ],
    "source": [
     "# 取得所有工作項目元素\n",
-    "\n"
+    "job_title = driver.find_element(By.CSS_SELECTOR, '[data-gtm-joblist=\"職缺-職缺名稱\"]').text\n",
+    " = driver.find_element(By.CSS_SELECTOR, '[data-gtm-joblist=\"職缺-職缺名稱\"]').text\n",
+    "\n",
+    "print(job_title)\n"
    ]
   },
   {
