--- a/techersfile/4teachers-Selenium/webdriver_pra.ipynb
+++ b/techersfile/4teachers-Selenium/webdriver_pra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c170bf6d",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "27064a51",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "e7c4c44a",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "170d7df1",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "3974e67a",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "3064d99a",
    "metadata": {},
    "outputs": [],
@@ -161,43 +161,43 @@
     "for area_element in area_elements:\n",
     "    area_value = area_element.find_element(By.CSS_SELECTOR, \"input\").get_attribute(\"value\")\n",
     "    area_name = area_element.find_element(By.CSS_SELECTOR, \".children\").text\n",
-    "    html = area_element.find_element(By.CSS_SELECTOR, \".children\").get_attribute('outerHTML')\n",
-    "    district_value[area_name] = html"
+    "    # html = area_element.find_element(By.CSS_SELECTOR, \".children\").get_attribute('outerHTML')\n",
+    "    district_value[area_name] = area_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "d453eb2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'台北市': '<span class=\"children\">台北市</span>',\n",
-       " '': '<span class=\"children\">連江縣東引鄉</span>',\n",
-       " '新北市': '<span class=\"children\">新北市</span>',\n",
-       " '宜蘭縣': '<span class=\"children\">宜蘭縣</span>',\n",
-       " '基隆市': '<span class=\"children\">基隆市</span>',\n",
-       " '桃園市': '<span class=\"children\">桃園市</span>',\n",
-       " '新竹縣市': '<span class=\"children\">新竹縣市</span>',\n",
-       " '苗栗縣': '<span class=\"children\">苗栗縣</span>',\n",
-       " '台中市': '<span class=\"children\">台中市</span>',\n",
-       " '彰化縣': '<span class=\"children\">彰化縣</span>',\n",
-       " '南投縣': '<span class=\"children\">南投縣</span>',\n",
-       " '雲林縣': '<span class=\"children\">雲林縣</span>',\n",
-       " '嘉義縣市': '<span class=\"children\">嘉義縣市</span>',\n",
-       " '台南市': '<span class=\"children\">台南市</span>',\n",
-       " '高雄市': '<span class=\"children\">高雄市</span>',\n",
-       " '屏東縣': '<span class=\"children\">屏東縣</span>',\n",
-       " '台東縣': '<span class=\"children\">台東縣</span>',\n",
-       " '花蓮縣': '<span class=\"children\">花蓮縣</span>',\n",
-       " '澎湖縣': '<span class=\"children\">澎湖縣</span>',\n",
-       " '金門縣': '<span class=\"children\">金門縣</span>',\n",
-       " '連江縣': '<span class=\"children\">連江縣</span>'}"
+       "{'台北市': '6001001000',\n",
+       " '': '6001023004',\n",
+       " '新北市': '6001002000',\n",
+       " '宜蘭縣': '6001003000',\n",
+       " '基隆市': '6001004000',\n",
+       " '桃園市': '6001005000',\n",
+       " '新竹縣市': '6001006000',\n",
+       " '苗栗縣': '6001007000',\n",
+       " '台中市': '6001008000',\n",
+       " '彰化縣': '6001010000',\n",
+       " '南投縣': '6001011000',\n",
+       " '雲林縣': '6001012000',\n",
+       " '嘉義縣市': '6001013000',\n",
+       " '台南市': '6001014000',\n",
+       " '高雄市': '6001016000',\n",
+       " '屏東縣': '6001018000',\n",
+       " '台東縣': '6001019000',\n",
+       " '花蓮縣': '6001020000',\n",
+       " '澎湖縣': '6001021000',\n",
+       " '金門縣': '6001022000',\n",
+       " '連江縣': '6001023000'}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,13 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "774d8063",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 取得台北市的 value \n",
-    "area = district_value[\"台北市\"]\n",
+    "area = district_value[\"台北市\"] + ',' + district_value['新北市']\n",
     "\n",
     "# 造訪台北市的搜尋結果頁面\n",
     "driver.get(f\"https://www.104.com.tw/jobs/search/?area={area}&jobsource=index_s&keyword=python&mode=s&page=1\")"
@@ -223,13 +223,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "837306d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "job_cards = driver.find_elements(By.CSS_SELECTOR, \".vue-recycle-scroller__item-view.recycle-scroller--item\")\n",
+    "print(len(job_cards))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "182a5c71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI工程師Python\n",
+      "https://www.104.com.tw/job/8uzq4?jobsource=hotjob_chr_exp\n",
+      "悟空科技股份有限公司\n",
+      "其它軟體及網路相關業\n",
+      "-具Python使用經驗 -具PyTorch 使用經驗 -具Git 與 CI/CD 流程（GitLab CI、GitHub Actions）使用經驗 -具獨立研究開源程式碼相關經驗 -具Linux環境、Docker、Anaconda、GCP等相關\n",
+      "<系統網路> 系統網路工程師\n",
+      "https://www.104.com.tw/job/8b8kp?jobsource=hotjob_chr_exp\n",
+      "聯和科創股份有限公司\n",
+      "電腦系統整合服務業\n",
+      "能力 4. 具備系統管理能力，Shell 或是 Python 類皆可 【加分條件】 1. 具備撰寫 Ansible 腳本佈署 2. 有使用與管理AWS EC2與 Linode 或其他VM的經驗(如 AWS、GCP、Tencent、Aliyun)\n",
+      "Python 後端工程師\n",
+      "https://www.104.com.tw/job/8nmw0?jobsource=index_s\n",
+      "稑燾智能有限公司\n",
+      "電腦軟體服務業\n",
+      "1. 熟Python Fastapi 2.注重軟體開發品質 3. 負責軟體之分析、設計以及程式撰寫。 4. 規劃執行軟體架構及模組之設計，並控管軟體設計進度。 5, 進行軟體之測試與修改。 6. 規劃、執行與維護量產的產品。 7. 具備研究軟體新\n"
+     ]
+    }
+   ],
    "source": [
     "# 取得所有工作項目元素\n",
-    "\n"
+    "\n",
+    "cnt = 0\n",
+    "for job_card in job_cards:\n",
+    "    job_title = job_card.find_element(By.CSS_SELECTOR, '[data-gtm-joblist=\"職缺-職缺名稱\"]').text\n",
+    "    job_url = job_card.find_element(By.CSS_SELECTOR, '[data-gtm-joblist=\"職缺-職缺名稱\"]').get_attribute('href')\n",
+    "    company = job_card.find_element(By.CSS_SELECTOR, '[data-gtm-joblist=\"職缺-公司名稱\"]').text\n",
+    "    industry = job_card.find_element(By.CSS_SELECTOR, '[data-gtm-joblist^=\"職缺-產業\"]').text\n",
+    "    job_desc = job_card.find_element(By.CSS_SELECTOR, '.info-description').text\n",
+    "    print(job_title)\n",
+    "    print(job_url)\n",
+    "    print(company)\n",
+    "    print(industry)\n",
+    "    print(job_desc)\n",
+    "    cnt += 1\n",
+    "    if cnt >= 3:\n",
+    "        break"
    ]
   },
   {
