--- a/4-Selenium/homework.ipynb
+++ b/4-Selenium/homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "41c500f4",
    "metadata": {},
    "outputs": [],
@@ -24,20 +24,20 @@
     "\n",
     "# 建立 Chrome 瀏覽器物件\n",
     "driver = webdriver.Chrome(options=options)\n",
-    "driver.get(\"https://www.momoshop.com.tw/main/Main.jsp\")\n",
+    "driver.get(\"https://24h.pchome.com.tw/\")\n",
     "\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "25720ba9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver.find_element(By.CSS_SELECTOR, \"input[name='search-input']\").send_keys(\"潛水蛙鞋\")\n",
-    "driver.find_element(By.CSS_SELECTOR, \".flex.h-full.items-center.overflow-hidden > button\").click()\n",
+    "driver.find_element(By.CSS_SELECTOR, \".c-search__input\").send_keys(\"潛水蛙鞋\")\n",
+    "driver.find_element(By.CSS_SELECTOR, \".btn.btn--sm.gtmClickV2\").click()\n",
     "\n"
    ]
   },
